# qtstatusbar

src/: CMakeLists.txt  statusbar.h  statusbar_android.cpp
